# Batch435_Quarter2_Saturday

2020 12 12 Saturday/generic/: Cargo.toml
2020 12 12 Saturday/generic/src/: main.rs
2020 12 12 Saturday/struct_generic/: Cargo.toml
2020 12 12 Saturday/struct_generic/src/: main.rs
2020 12 19 Saturday/generics_more/: Cargo.toml
2020 12 19 Saturday/generics_more/src/: main.rs
2020 12 19 Saturday/trait1/src/: main.rs
2020 12 26 Saturday/trait1/src/: main.rs
2021 01 02 Saturday/closure/src/: main.rs
2021 01 02 Saturday/closure_struct/: Cargo.toml
2021 01 02 Saturday/closure_struct/src/: main.rs
2021 01 02 Saturday/some_none/: Cargo.toml
2021 01 02 Saturday/some_none/src/: main.rs
2021 01 09 Saturday/bit_wise/: Cargo.toml
2021 01 09 Saturday/bit_wise/src/: main.rs
2021 01 09 Saturday/panic_learning/: Cargo.toml
2021 01 09 Saturday/panic_learning/src/: main.rs
imran_Discovery/src/05-led-roulette/.cargo/: config
imran_Discovery/src/05-led-roulette/src/: main.rs  temp.rs
imran_Discovery/src/06-hello-world/src/: main.rs
imran_Discovery/src/08-leds-again/: openocd.gdb
imran_Discovery/src/08-leds-again/auxiliary/: Cargo.toml
imran_Discovery/src/11-usart/: Cargo.toml  openocd.gdb
imran_Discovery/src/14-i2c/: Cargo.toml
imran_Discovery/src/15-led-compass/: Cargo.toml
imran_Discovery/src/15-led-compass/auxiliary/: Cargo.toml
imran_Discovery/src/15-led-compass/auxiliary/src/: bluetooth.rs  lib.rs
imran_Discovery/src/15-led-compass/src/: bluetooth.rs  main.rs
imran_Discovery/src/16-punch-o-meter/: Cargo.toml
(+16 files in other folders)
